<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.chummer5view.MainActivity">
    <item android:id="@+id/action_start"
          android:title="@string/action_allgemein"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_fight"
          android:title="@string/action_fight"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_skills"
          android:title="@string/action_skills"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_gear"
          android:title="@string/action_gear"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_cyberware"
          android:title="@string/action_cyberware"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_vehicle"
          android:title="@string/action_vehicle"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_magic"
          android:title="@string/action_magic"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>

</menu>

